--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.14.3",
+    "@types/three": "^0.156.0",
     "gsap": "^3.12.2",
     "init": "^0.1.2",
     "react": "^18.2.0",
