--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/fiber": "^8.14.3",
-    "@types/three": "^0.156.0",
+    "@react-three/drei": "^9.97.0",
+    "@react-three/fiber": "^8.15.16",
+    "@types/three": "^0.161.2",
     "gsap": "^3.12.2",
     "init": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.68.0",
-    "three": "^0.156.1"
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
