--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-three/drei": "^9.97.0",
     "@react-three/fiber": "^8.15.16",
     "@types/three": "^0.161.2",
-    "gsap": "^3.12.2",
     "init": "^0.1.2",
+    "project-mars": "file:",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.13.0",
     "sass": "^1.68.0",
     "three": "^0.161.0"
   },
